--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.5.8"
   }
 }
